Update pricing structure - Basic FREE, Bronze 100, Silver 500, Gold 1000, Platinum 1500 (KSH/USD monthly + yearly discount note)

--- a/index.html
+++ b/index.html
@@ -154,12 +154,13 @@
         <div class="container">
             <h2>Choose Your Package</h2>
             <p class="section-subtitle">Select the plan that fits your goals</p>
+                        <p class="pricing-note" style="text-align: center; margin-top: 10px; color: #666;">💰 Save 15% with yearly plans! Prices shown are monthly rates.</p>
             <div class="pricing-grid">
                 <div class="pricing-card">
                     <div class="package-badge">FREE</div>
                     <h3>Basic</h3>
                     <div class="price">
-                        <span class="amount">KSH 0</span>
+                        <span class="amount">FREE</span>
                         <span class="period">/month</span>
                     </div>
                     <ul class="features-list">
@@ -176,7 +177,7 @@
                     <div class="package-badge">POPULAR</div>
                     <h3>Bronze</h3>
                     <div class="price">
-                        <span class="amount">KSH 500</span>
+                        <span class="amount">KSH 100 / $0.77</span>
                         <span class="period">/month</span>
                     </div>
                     <ul class="features-list">
@@ -193,7 +194,7 @@
                     <div class="package-badge">BEST VALUE</div>
                     <h3>Silver</h3>
                     <div class="price">
-                        <span class="amount">KSH 1,500</span>
+                        <span class="amount">KSH 500 / $3.85</span>
                         <span class="period">/month</span>
                     </div>
                     <ul class="features-list">
@@ -210,7 +211,7 @@
                     <div class="package-badge">PRO</div>
                     <h3>Gold</h3>
                     <div class="price">
-                        <span class="amount">KSH 3,000</span>
+                        <span class="amount">KSH 1,000 / $7.69</span>
                         <span class="period">/month</span>
                     </div>
                     <ul class="features-list">
@@ -227,7 +228,7 @@
                     <div class="package-badge">ELITE</div>
                     <h3>Platinum</h3>
                     <div class="price">
-                        <span class="amount">KSH 5,000</span>
+                        <span class="amount">KSH 1,500 / $11.54</span>
                         <span class="period">/month</span>
                     </div>
                     <ul class="features-list">
